completed index UI and linked signup to new users

--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -26,7 +26,7 @@
 </div>
 
 <div id="info-div">
-	<h2 class="text-center" id="info-header">Why order from JUST EAT?</h2>
+	<h2 class="text-center" id="info-header">Why order from JUST FEAST?</h2>
 
 	<div class="info-grid">
 
