--- a/app/views/public/_navigation.html.erb
+++ b/app/views/public/_navigation.html.erb
@@ -7,14 +7,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">JustEat</a>
+      <%= link_to("JustFeast", public_index_path, :class=>'navbar-brand') %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="#">Login</a></li>
-        <li><a href="#">Signup</a></li>
+        <li><%= link_to("Signup", new_user_path) %></li>
         <li><a href="#">Help</a></li>
         
       </ul>
