--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -20,7 +20,26 @@
 		</div>
 		<div class="col-md-3 col-sm-12">
 		</div>
+		<br>
+		<br>
+		<br>
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4 col-sm-12 steps-div">
+					<h2>1. Enter your postal code</h2>
+					<p>Tell us where you are. All we need is your postal code.</p>
+				</div>
+				<div class="col-md-4 col-sm-12 steps-div">
+					<h2>2. Choose your restaurant</h2>
+					<p>Hundreds of dishes to choose from.</p>
+				</div>
+				<div class="col-md-4 col-sm-12 steps-div steps-div-last">
+					<h2>3. Pay securely</h2>
+					<p>Pay with Visa, Visa Debit, Amex, Mastercard or Interac Online.</p>
+				</div>
 
+			</div>
+		</div>
 
 	</div>
 </div>
