--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -11,6 +11,7 @@
       <th>Password</th>
       <th>Phone</th>
       <th>Address</th>
+      <td>Restaurants</td>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,6 +25,13 @@
         <td><%= admin.password %></td>
         <td><%= admin.phone %></td>
         <td><%= admin.address %></td>
+        <td>
+          <ul>
+            <% admin.restaurants.each do |rest| %>
+              <li class="admin-rest-names"><%= rest.name %></li>
+            <% end %>
+          </ul>
+        </td>
         <td><%= link_to 'Show', admin %></td>
         <td><%= link_to 'Edit', edit_admin_path(admin) %></td>
         <td><%= link_to 'Destroy', admin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
