--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,47 +1,31 @@
 <%= form_for(user) do |f| %>
-  <% if user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-      <ul>
-      <% user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  
 
   <div class="field">
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %>
+    <%= f.text_field :first_name, :placeholder=>'First Name' %>
   </div>
 
   <div class="field">
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %>
+    <%= f.text_field :last_name, :placeholder=>'Last Name' %>
   </div>
 
   <div class="field">
-    <%= f.label :email %>
-    <%= f.text_field :email %>
+    <%= f.text_field :email, :placeholder=>'Email' %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
-    <%= f.text_field :password %>
+    <%= f.password_field :password, :placeholder=>'Password' %>
   </div>
 
   <div class="field">
-    <%= f.label :phone %>
-    <%= f.text_field :phone %>
+    <%= f.text_field :phone, :placeholder=>'Phone' %>
   </div>
 
   <div class="field">
-    <%= f.label :address %>
-    <%= f.text_field :address %>
+    <%= f.text_field :address, :placeholder=>'Address' %>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= submit_tag("Create Account!", :class=>'btn submit-btn') %>
   </div>
 <% end %>
