--- a/app/assets/stylesheets/public.css
+++ b/app/assets/stylesheets/public.css
@@ -1,6 +1,30 @@
 /* Navigation styles */
 
+.navbar-default .navbar-header, .navbar-default .collapse {
+	background-color:#c30000;
+	border: 1px solid #c30000;
+}
 
+.navbar .navbar-header .navbar-toggle .icon-bar {
+	background-color: white;
+}
+.navbar .navbar-header .navbar-toggle:hover{
+	background-color: #c30000;
+}
+
+.navbar-default .collapse ul li a, .navbar-default .navbar-header a{
+	color: white;
+}
+
+
+
+ .navbar-default .navbar-header a:hover{
+ 	color: white;
+ }
+.navbar-default .collapse ul li a:hover{
+	color: #c30000;
+	background-color: white ;
+}
 /* index.html.erb styles */
 
 /* Start stylings for the hero-img div */
