--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -15,7 +15,7 @@
 			</div>
 
 			<div class="col-md-3 col-sm-12">
-				<button class="btn btn-info feed-btn btn-lg">Feed Me!</button>
+				<button class="btn feed-btn btn-lg">Feed Me!</button>
 			</div>
 		</div>
 		<div class="col-md-3 col-sm-12">
@@ -81,7 +81,6 @@
 			<br>
 			<%= image_tag('wallet.png') %>
 		</div>
-
 	</div>
 </div>
 
