--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -1,8 +1,8 @@
 /* Error Fields  */
 
 #error_explanation{
-	background-color: #ff8080;
-	border-top: 5px solid #ff4d4d;
+	background-color: #ffbb99;
+	border-top: 5px solid #ff9966;
 	border-radius: 5px;
 	margin: 0 20px;
 	padding: 20px;
@@ -39,7 +39,7 @@
 }
 
 #new_user_header{
-	color: #0099cc;
+	color: black;
 }
 
 .submit-btn{
