--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -5,5 +5,19 @@
   <%= @category.name %>
 </p>
 
+<p>
+  <strong># of restaurants in this category:</strong>
+  <%= @category.restaurants.size %>
+
+  <ul>
+  	<% @category.restaurants.each do |rest| %>
+  		<li>
+  			<%= link_to rest.name, restaurant_path(rest.id) %>
+  		</li>
+  	<% end %>
+  </ul>
+</p>
+
+
 <%= link_to 'Edit', edit_category_path(@category) %> |
 <%= link_to 'Back', categories_path %>
