--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -46,6 +46,19 @@
     <%= f.text_field :phone %>
   </div>
 
+  <div class="field">
+    <%= f.label :admin_id, "Admin ID"%>
+    <%= f.select(:admin_id, @admins.map { |a| [a.first_name, a.id]}) %>
+  </div>
+
+  <div class="field">
+    <%= f.label :category_ids, "Category ID"%>
+    <%= f.select(:category_ids, @categories.map { |c| [c.name, c.id]}) %>
+  </div>
+
+  
+ 
+
   <div class="actions">
     <%= f.submit %>
   </div>
